bdr.BDR.scala.error
Erreur de compilation :
BDR:4: error: type mismatch;
 found   : Unit
 required: Boolean
  if(x="R"){
      ^BDR:7: error: type mismatch;
 found   : Unit
 required: Boolean
  else if(x="L"){
           ^BDR:10: error: type mismatch;
 found   : Unit
 required: Boolean
  else if(x="I"){
           ^BDR:13: error: type mismatch;
 found   : Unit
 required: Boolean
  else if(x="A"){
           ^BDR:16: error: type mismatch;
 found   : Unit
 required: Boolean
  else if(x="B"){
           ^BDR:19: error: type mismatch;
 found   : Unit
 required: Boolean
  else if(x="C"){
           ^BDR:22: error: type mismatch;
 found   : Unit
 required: Boolean
  else if(x="Z"){
           ^BDR:25: error: type mismatch;
 found   : Unit
 required: Boolean
  else if(x="Y"){
           ^BDR:28: error: type mismatch;
 found   : Unit
 required: Boolean
  else if(x="X"){
           ^BDR:31: error: type mismatch;
 found   : Unit
 required: Boolean
  else if(x=""){
           ^